Fixed invalid bower.json
Hi, i just noticed that bower.json doesnt pass Jsonlint test;

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "main": [
     "./css/wirefy.css",
-    "./js/plugins.min.js"
+    "./js/plugins.min.js",
     "./js/wirefy.js",
     "./fonts/fontawesome-webfont.eot",
     "./fonts/fontawesome-webfont.svg",
@@ -16,7 +16,7 @@
     "_*",
     "CNAME",
     "composer.json",
-    "CONTRIBUTING.md",
+    "CONTRIBUTING.md"
   ],
   "dependencies": {
     "jquery": ">= 1.10.2",
