--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "3.0.0",
   "private": true,
   "dependencies": {
-    "grunt-lib-contrib": "~0.6.1"
+    "grunt-lib-contrib": "~0.6.1",
+    "lru-cache": "^4.1.2"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-uglify": "~0.2.7",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-imagemin": "~0.1.4",
     "grunt-contrib-sass": "~0.5.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-cssmin": "~0.7.0"
+    "grunt-contrib-uglify": "~0.2.7"
   }
 }
