--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,4 @@
 
-open_collective: # chris-da-sie
-custom: # https://www.paypal.me/chrisdasie
+
+open_collective: chris-da-sie
+custom: https://www.paypal.me/chrisdasie
